--- a/templates/TimeTrack/base.html
+++ b/templates/TimeTrack/base.html
@@ -6,7 +6,22 @@
 </head>
 <body>
     <h1>TimeTrack</h1>
-    <a href={% url 'TimeTrack:index' %}>Todo</a>
+    <a href={% url 'TimeTrack:index' %}>Todo</a>-
+    <a href="{% url 'TimeTrack:group' %}">Group</a>-
+    
+    {% if user.is_authenticated %}
+        <p>Welcome, {{ user.username }}</p>
+        {# <a href="{% url 'registration:logout' %}">Logout</a> #}
+        <form method="post" action="{% url 'registration:logout' %}">  
+            {% csrf_token %}  
+            <button type="submit">Logout</button>  
+        </form>
+    {% else %}
+        <a href="{% url 'registration:login' %}">Login</a>
+    {% endif %}
+    
+    <a href="{% url 'registration:register' %}">Register</a>
+
     
     {% block content %}
     {% endblock %}
