--- a/templates/TimeTrack/group.html
+++ b/templates/TimeTrack/group.html
@@ -3,16 +3,18 @@
 {% block content %}
 	<ul>
         {% for each in group %}
-        	<li>{{ each }}</li>\
+        	<li>{{ each }}</li>
             <ul>
                 {% for todo in each.todo_set.all %}
-                	<li>{{ todo }}</li>
+                	<li>{{ todo }} {{ todo.description }}</li>
                 {% empty %}
-                	<p>No Groups have been added yet. </p>
+                	<p>No Todo have been added yet. </p>
                 {% endfor %}
             </ul>
         {% empty %}
         	<p>No Groups have been added yet. </p>
         {% endfor %}
     </ul>
+    <a href="{% url 'TimeTrack:new_group' %}">Create New Group</a>
+    <a href="{% url 'TimeTrack:new_todo' %}">Create New Todo</a>
 {% endblock %}
