--- a/templates/TimeTrack/newGroup.html
+++ b/templates/TimeTrack/newGroup.html
@@ -1,10 +1,27 @@
 {% extends 'TimeTrack/base.html' %}
 
 {% block content %}
-	<h2>Add New Group</h2>
-    <form action="{% url 'TimeTrack:new_group' %}" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button name="submit">Add Group</button>
-    </form>
+    {#    <h2>Add New Group</h2>#}
+    {#    <form action="{% url 'TimeTrack:new_group' %}" method="post">#}
+    {#        {% csrf_token %}#}
+    {#        {{ form.as_p }}#}
+    {#        <button name="submit">Add Group</button>#}
+    {#    </form>#}
+    <!-------------------------------------------------------------------------------->
+    {% load static %}
+    <div class="form-signin w-100 m-auto">
+        <img width="300" height="300" src="{% static 'TimeTrack/img/group.svg' %}" alt="new group">
+        <h1 class="mb-3 fw-normal mb-5">Create New Group</h1>
+
+        <form method="post" action="{% url 'TimeTrack:new_group' %}">
+            {% csrf_token %}
+            {{ form.non_field_errors }}
+
+            <div class="form-floating">
+                <input class="form-control" id="floatingInput" placeholder="name" {{ form.name }}>>>
+                <label for="floatingInput">Name</label>
+            </div>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Create</button>
+        </form>
+    </div>
 {% endblock %}
