--- a/templates/TimeTrack/base.html
+++ b/templates/TimeTrack/base.html
@@ -7,9 +7,6 @@
     {% load static %}
     <link href="{% static 'TimeTrack/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'TimeTrack/css/style.css' %}" rel="stylesheet">
-
-    <script src="{% static 'TimeTrack/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'TimeTrack/js/javascript.js' %}"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -46,6 +43,21 @@
                 </li>
             </ul>
         </div>
+        <div class="ms-auto mx-5">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                         class="bi bi-person-fill" viewBox="0 0 16 16">
+                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
+                    </svg>
+                    {% if not user.is_authenticated %}
+                        <strong class="text-light">Not Logged In</strong>
+                    {% else %}
+                        <strong class="text-light">{{ user }}</strong>
+                    {% endif %}
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 
@@ -67,15 +79,22 @@
             </svg>
             <p class="my-2">Group</p>
         </a>
+        <a class="nav-link py-3 border-bottom rounded-0" href="{% url 'TimeTrack:pomodoro' %}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-alarm"
+                 viewBox="0 0 16 16">
+                <path d="M8.5 5.5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5z"/>
+                <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07a7.001 7.001 0 0 0-3.273 12.474l-.602.602a.5.5 0 0 0 .707.708l.746-.746A6.97 6.97 0 0 0 8 16a6.97 6.97 0 0 0 3.422-.892l.746.746a.5.5 0 0 0 .707-.708l-.601-.602A7.001 7.001 0 0 0 9 2.07V1h.5a.5.5 0 0 0 0-1h-3zm1.038 3.018a6.093 6.093 0 0 1 .924 0 6 6 0 1 1-.924 0zM0 3.5c0 .753.333 1.429.86 1.887A8.035 8.035 0 0 1 4.387 1.86 2.5 2.5 0 0 0 0 3.5zM13.5 1c-.753 0-1.429.333-1.887.86a8.035 8.035 0 0 1 3.527 3.527A2.5 2.5 0 0 0 13.5 1z"/>
+            </svg>
+            <p class="my-2">podo<br>romo</p>
+        </a>
     </div>
 
     <div class="content">
         {% block content %}
         {% endblock %}
     </div>
-
-
 </main>
-
+<script src="{% static 'TimeTrack/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'TimeTrack/js/javascript.js' %}"></script>
 </body>
 </html>
