--- a/templates/TimeTrack/newGroup.html
+++ b/templates/TimeTrack/newGroup.html
@@ -17,8 +17,8 @@
             {% csrf_token %}
             {{ form.non_field_errors }}
 
-            <div class="form-floating">
-                <input class="form-control" id="floatingInput" placeholder="name" {{ form.name }}>>>
+            <div class="form-floating my-lg-5">
+                <input name="name" class="form-control" id="floatingInput" placeholder="name" required>
                 <label for="floatingInput">Name</label>
             </div>
             <button class="w-100 btn btn-lg btn-primary" type="submit">Create</button>
