--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,12 +12,12 @@
             {{ form.non_field_errors }}
 
             <div class="form-floating">
-                <input class="form-control" id="floatingInput" placeholder="name"{{ form.username }}>
+                <input class="form-control" id="floatingInput" placeholder="name" name="username" required>
                 <label for="floatingInput">Name</label>
             </div>
             <div class="form-floating">
                 <input type="password" class="form-control" id="floatingPassword"
-                       placeholder="Password" {{ form.password }}>
+                       placeholder="Password" name="password" required>
                 <label for="floatingPassword">Password</label>
             </div>
             <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
