--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -39,31 +39,31 @@
             <img class="my-lg-2" width="300" height="300" src="{% static 'TimeTrack/img/Regis.svg' %}" alt="register">
             <h1 class="h3 mb-3 fw-normal">Please Register</h1>
 
-            <div class="form-floating">
+            <div class="form-floating my-lg-2">
                 <input class="form-control" id="{{ form.username.label }}"
-                       placeholder="name"{{ form.username }}>>>
+                       placeholder="name" name="username" required>
                 <label for="{{ form.username.label }}">Name</label>
             </div>
             <div class="alert alert-warning w">
                 {{ form.username.errors }}
             </div>
-            <div class="form-floating">
+            <div class="form-floating my-lg-2">
                 <input type="password" class="form-control" id="{{ form.password1.label }}"
-                       placeholder="Password" {{ form.password1 }}>>>
+                       placeholder="Password" name="password1" required>
                 <label for="{{ form.password1.label }}">Password</label>
             </div>
             <div class="alert alert-warning w">
                 {{ form.password1.errors }}
             </div>
-            <div class="form-floating">
+            <div class="form-floating my-lg-2">
                 <input type="password" class="form-control" id="{{ form.password2.label }}"
-                       placeholder="Password" {{ form.password2 }}>>>
+                       placeholder="Password" name="password2" required>
                 <label for="{{ form.password2.label }}">Verify Password</label>
             </div>
             <div class="alert alert-warning w">
                 {{ form.password2.errors }}
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="">Register</button>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
         </form>
     </div>
 
