--- a/TimeTrack/static/TimeTrack/css/style.css
+++ b/TimeTrack/static/TimeTrack/css/style.css
@@ -12,6 +12,13 @@
     filter: drop-shadow(0 0 25px #ff6493);
 }
 
+#checkin:hover {
+    color: #6f42c1;
+    border-left: 3px solid;
+    transition: 0.3s;
+    filter: drop-shadow(0 0 25px #6f42c1);
+}
+
 #about:hover {
     color: #00dc82;
     border-left: 3px solid;
@@ -88,3 +95,13 @@
     transition: 0.7s;
 }
 
+.empty-list:empty::before {
+    content: "May your day be graced with the satisfaction of a task well done, each endeavor brought to its fulfillment. Congratulations on a day filled with accomplishments, and may your heart be filled with joy knowing that all your duties lie in the past, now free to embrace the present and dream of tomorrow's adventures.";
+    font-size: large;
+    display: block;
+    padding: 10px;
+    border: 3px #6ea8fe solid;
+    color: #6ea8fe;
+    border-radius: 20px;
+    margin-top: 50px;
+}
