--- a/templates/TimeTrack/base.html
+++ b/templates/TimeTrack/base.html
@@ -25,10 +25,30 @@
                     <a class="nav-link" href="{% url 'TimeTrack:group' %}" id="group">Group</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'TimeTrack:checkin' %}" id="checkin">CheckIn</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#" id="about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'registration:register' %}" id="register">Register</a>
+                </li>
+            </ul>
+        </div>
+        <div class="ms-auto mx-5">
+            <ul class="navbar-nav">
+                <li class="nav-item d-flex align-items-center">
+                    <p class="my-auto mx-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-person-fill" viewBox="0 0 16 16">
+                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
+                        </svg>
+                        {% if not user.is_authenticated %}
+                            <strong class="text-light">Not Logged In</strong>
+                        {% else %}
+                            <strong class="text-light">{{ user }}</strong>
+                        {% endif %}
+                    </p>
                 </li>
                 <li class="nav-item">
                     {% if not user.is_authenticated %}
@@ -39,21 +59,6 @@
                             <button class="nav-link" style="background: none; border: none" type="submit">Logout
                             </button>
                         </form>
-                    {% endif %}
-                </li>
-            </ul>
-        </div>
-        <div class="ms-auto mx-5">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                         class="bi bi-person-fill" viewBox="0 0 16 16">
-                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
-                    </svg>
-                    {% if not user.is_authenticated %}
-                        <strong class="text-light">Not Logged In</strong>
-                    {% else %}
-                        <strong class="text-light">{{ user }}</strong>
                     {% endif %}
                 </li>
             </ul>
@@ -85,7 +90,15 @@
                 <path d="M8.5 5.5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5z"/>
                 <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07a7.001 7.001 0 0 0-3.273 12.474l-.602.602a.5.5 0 0 0 .707.708l.746-.746A6.97 6.97 0 0 0 8 16a6.97 6.97 0 0 0 3.422-.892l.746.746a.5.5 0 0 0 .707-.708l-.601-.602A7.001 7.001 0 0 0 9 2.07V1h.5a.5.5 0 0 0 0-1h-3zm1.038 3.018a6.093 6.093 0 0 1 .924 0 6 6 0 1 1-.924 0zM0 3.5c0 .753.333 1.429.86 1.887A8.035 8.035 0 0 1 4.387 1.86 2.5 2.5 0 0 0 0 3.5zM13.5 1c-.753 0-1.429.333-1.887.86a8.035 8.035 0 0 1 3.527 3.527A2.5 2.5 0 0 0 13.5 1z"/>
             </svg>
-            <p class="my-2">podo<br>romo</p>
+            <p class="my-2">Podo<br>romo</p>
+        </a>
+        <a class="nav-link py-3 border-bottom rounded-0" href="{% url 'TimeTrack:myDay' %}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                 class="bi bi-emoji-sunglasses" viewBox="0 0 16 16">
+                <path d="M4.968 9.75a.5.5 0 1 0-.866.5A4.498 4.498 0 0 0 8 12.5a4.5 4.5 0 0 0 3.898-2.25.5.5 0 1 0-.866-.5A3.498 3.498 0 0 1 8 11.5a3.498 3.498 0 0 1-3.032-1.75zM7 5.116V5a1 1 0 0 0-1-1H3.28a1 1 0 0 0-.97 1.243l.311 1.242A2 2 0 0 0 4.561 8H5a2 2 0 0 0 1.994-1.839A2.99 2.99 0 0 1 8 6c.393 0 .74.064 1.006.161A2 2 0 0 0 11 8h.438a2 2 0 0 0 1.94-1.515l.311-1.242A1 1 0 0 0 12.72 4H10a1 1 0 0 0-1 1v.116A4.22 4.22 0 0 0 8 5c-.35 0-.69.04-1 .116z"></path>
+                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-1 0A7 7 0 1 0 1 8a7 7 0 0 0 14 0z"></path>
+            </svg>
+            <p class="my-2">MyDay</p>
         </a>
     </div>
 
