新增了Calendar 添加了迁移文件 增加importance排序 修复了亿些Bug

--- a/templates/TimeTrack/checkIn.html
+++ b/templates/TimeTrack/checkIn.html
@@ -14,7 +14,7 @@
                         </strong>
                         <br>  
                         from {{ checkin.start }} to {{ checkin.end }} --
-                        {% if not checkin.doneToday %}
+                        {% if not checkin.done %}
                             <strong class="text-danger">Incomplete</strong>
                         {% else %}
                             <strong class="text-primary">Done</strong>
